<resources>
    <!--Main page-->
    <string name="app_name">Memory Gain</string>
    <string name="mainHeading">Recall Something!</string>
    <string name="message">Your memory is good</string>
    <string name="phraseButton">New Phrase</string>
    <string name="goToPhraseGuess">Phrase Recall</string>
    <string name="imageButton">New Image</string>
    <string name="goToGuessImage">Image Recall</string>
    <string name="locationButton">New Location</string>
    <string name="goToLocationGuess">Location Recall</string>
    <string name="statsButton">My Statistics</string>
    <string name="settingsButton">Settings</string>

    <!--Phrase Recall-->
    <string name="phraseTitleText">Phrase Recall</string>
    <string name="directions">Remember this phrase. At random, you will receive a notification,
            prompting you to enter the phrase.</string>
    <string name="accept">Accept Phrase</string>
    <string name="acceptLoc">Accept Location</string>
    <string name="newPhrs">New Phrase</string>
    <string name="phraseGuess">Guess That Phrase!</string>

    <!--Settings-->
    <string name="enableVib">Enable Vibration</string>
    <string name="notifications">Notifications</string>
    <string name="locationServices">Location Services</string>
    <string name="clearCache">Clear Local Cache</string>
    <string name="reset">Reset Statistics</string>
    <string name="enabNotif">Enable Notifications</string>
    <string name="enabGPS">Enable GPS Tracking</string>
    <string name="mainPage">Main Page</string>
    <string name="title_activity_maps">Map</string>
    <string name="phraseTimer">Phrase Timer</string>
    <string name="locationTimer">Location Timer</string>
    <string name="imageTimer">Image Timer</string>
    <string name="timers">Timers</string>

    <!--Location Guess-->
    <string name="locationRecall">Location Recall</string>
    <string name="locationRecallMessage">Below is your current location and time. Remember this address:</string>
    <string name="guessLocation">Guess That Location!</string>
    <string name="maps">Map</string>
    <string name="acceptLocation">Accept Location</string>

    <!--Statistics-->
    <string name="phrSuccess">Phrase Recall Success: </string>
    <string name="locSuccess">Location Recall Success: </string>
    <string name="imgSuccess">Image Recall Success: </string>
    <string name="overallSuccess">Overall Success: </string>

    <!--Various-->
    <string name="guess">Guess!</string>
    <string name="cancel">Cancel</string>
    <string name="hint">Hint</string>
    <string name="main">Main Page</string>
    <string name="userPhoto">Photo user has taken to recall</string>
    <string name="visual">Visual Representation of Data</string>

    <!--Image Guess-->
    <string name="imageGuess">OK. I am ready to make a guess!</string>
    <string name="phrRecallGreeting">Think back hard... What was your given phrase?</string>
    <string name="takePicture">Take a picture!</string>
    <string name="savePicture">Save picture!</string>
    <string name="photoCorrect">I Was Correct!</string>
    <string name="photoIncorrect">I Was Incorrect!</string>

</resources>
