<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/yellow"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/photoDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/userPhoto" />
    <Button
        android:id="@+id/takePicture"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:onClick="takePicture"
        android:text="@string/takePicture"/>
    <Button
        android:id="@+id/savePicture"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:onClick="savePicture"
        android:text="@string/savePicture"/>
</LinearLayout>