<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="89dp">

    <!--Nothing for the text because that will be set while using app-->
    <TextView
        android:id="@+id/givenPhraseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="234dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phraseTitle"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/acceptBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="199dp"
        android:layout_marginStart="8dp"
        android:onClick="acceptPhrase"
        android:text="@string/accept"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phraseTitle"
        app:layout_constraintTop_toBottomOf="@+id/directionText"
        app:layout_constraintVertical_bias="0.996"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/newPhraseBtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="199dp"
        android:onClick="newPhrase"
        android:text="@string/newPhrs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phraseTitle"
        app:layout_constraintTop_toBottomOf="@+id/directionText"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/phraseTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="304dp"
        android:layout_marginTop="50dp"
        android:text="@string/phraseTitleText"
        android:textSize="36dp"
        app:layout_constraintBottom_toTopOf="@+id/givenPhraseText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/directionText"
        android:layout_width="497dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="327dp"
        android:layout_marginTop="164dp"
        android:text="@string/directions"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/newPhraseBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="99dp"
        android:onClick="goBackFromPhraseRecall"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/givenPhraseText" />
</android.support.constraint.ConstraintLayout>